--- a/content/posts/b1.md
+++ b/content/posts/b1.md
@@ -1,7 +1,7 @@
 ---
 title: "The Dance of the Jerboa: Tailed Monopod Dynamics"
 date: "Jan 2025"
-tags: ["Robotics", "Dynamics", "UPenn"]
+skills: ["robotics", "dynamics-control"]
 excerpt: "Exploring how Inertial Reorientation and SLIP models create biological agility in machines."
 ---
 
