--- a/content/posts/b2.md
+++ b/content/posts/b2.md
@@ -1,7 +1,7 @@
 ---
 title: "Why Embedded AI is the Backbone of Robotics"
 date: "Nov 2024"
-tags: ["Edge AI", "Embedded"]
+skills: ["embedded-c"]
 excerpt: "Bridging high-level neural foundations with low-latency hardware constraints."
 ---
 
