--- a/content/posts/b3.md
+++ b/content/posts/b3.md
@@ -1,7 +1,7 @@
 ---
 title: "Reinforcement Learning vs Classic Control"
 date: "Sep 2024"
-tags: ["RL", "AI", "Georgia Tech"]
+skills: ["rl", "pytorch"]
 excerpt: "My journey from UPenn Dynamics to Georgia Tech AI Specialization."
 ---
 
